--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "prepublish": "npm run build",
     "prepush": "npm test",
     "pretest": "npm run lint",
-    "test": "nyc mocha"
+    "test": "NODE_ENV=test nyc mocha"
   },
   "author": "@diffcunha",
   "repository": {
@@ -21,9 +21,11 @@
     "url": "git://github.com/diffcunha/jsonmltoreact.git"
   },
   "license": "MIT",
+  "keywords": ["JsonML", "React"],
   "dependencies": {
     "jsonml.js": "^0.1.0",
-    "lodash": "^4.0.0"
+    "lodash.camelcase": "^4.1.1",
+    "lodash.isfunction": "^3.0.8"
   },
   "peerDependencies": {
     "react": "^0.14.0"
@@ -40,16 +42,8 @@
     "eslint": "^2.10.1",
     "husky": "^0.11.4",
     "mocha": "^2.4.5",
-    "nyc": "6.4.4",
+    "nyc": "^6.4.4",
     "sinon": "^1.17.4"
-  },
-  "babel": {
-    "presets": [
-      "es2015"
-    ],
-    "plugins": [
-      "rewire"
-    ]
   },
   "nyc": {
     "require": [
