--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "lodash.isfunction": "^3.0.8"
   },
   "peerDependencies": {
-    "react": "^0.14.0"
+    "react": "^0.14.0 || ^0.15.0"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
