--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,11 @@
 {
-  "presets": ["es2015"],
+  "presets": [
+    "es2015"
+  ],
+  "plugins": [
+    "add-module-exports",
+    "transform-object-rest-spread"
+  ],
   "env": {
     "test": {
       "plugins": ["rewire"]
