--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "JsonML to React component converter",
   "main": "./lib/index.js",
   "scripts": {
-    "build": "npm run build:js",
-    "build:js": "./node_modules/.bin/babel ./src --out-dir ./lib",
+    "build": "./node_modules/.bin/babel ./src --out-dir ./lib",
     "coverage": "nyc --reporter=lcov --require babel-core/register mocha ${TEST_FILES:-test/src/index.spec.js}",
-    "lint": "eslint --ext .js -c .eslintrc .",
+    "lint": "eslint .",
     "prebuild": "rm -rf lib",
     "precommit": "npm run lint",
     "prepublish": "npm run build",
@@ -27,26 +26,28 @@
   ],
   "dependencies": {
     "jsonml.js": "^0.1.0",
-    "lodash.camelcase": "^4.1.1",
-    "lodash.isfunction": "^3.0.8"
+    "lodash.camelcase": "^4.1.1"
   },
   "peerDependencies": {
     "react": "^0.14.0 || ^15.0.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
-    "babel-eslint": "^6.0.4",
-    "babel-plugin-rewire": "^1.0.0-rc-3",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-template": "^6.8.0",
-    "babel-types": "^6.8.1",
-    "chai": "^3.5.0",
-    "eslint": "^2.10.1",
-    "husky": "^0.11.4",
-    "mocha": "^2.4.5",
-    "nyc": "^6.4.4",
-    "sinon": "^1.17.4"
+    "babel-cli": "6.24.1",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-rewire": "1.1.0",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-preset-es2015": "6.24.1",
+    "eslint": "3.19.0",
+    "eslint-config-standard": "10.2.1",
+    "eslint-plugin-import": "2.2.0",
+    "eslint-plugin-node": "4.2.2",
+    "eslint-plugin-promise": "3.5.0",
+    "eslint-plugin-standard": "3.0.1",
+    "husky": "0.13.3",
+    "mocha": "3.3.0",
+    "must": "0.13.4",
+    "nyc": "10.3.2",
+    "sinon": "2.2.0"
   },
   "nyc": {
     "require": [
